Turn library into Multi Release jar, so Java 8 is still supported, while new features will only be available for Java 17