@@ -2,6 +2,7 @@ package org.codehaus.plexus.archiver;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.eclipse.sisu.launch.InjectedTest;
 import org.junit.jupiter.api.AfterEach;
@@ -24,7 +25,7 @@ public abstract class TestSupport extends InjectedTest {
     }
 
     private static Path basedir() {
-        return Path.of(System.getProperty("basedir", (new File("")).getAbsolutePath()));
+        return Paths.get(System.getProperty("basedir", (new File("")).getAbsolutePath()));
     }
 
     protected static File getTestFile(final String path) {
